--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10.11"
 dependencies = [
     "jupynium>=0.2.7",
     "jupyter-console>=6.6.3",
+    "matplotlib>=3.10.8",
     "nbclassic>=1.3.3",
     "notebook>=7.5.1",
     "torch>=2.9.1",
